--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.15",
+    "@types/md5": "^2.1.33",
     "@types/node": "12.0.8",
     "@types/react": "16.8.20",
     "@types/react-dom": "16.8.4",
@@ -11,6 +12,7 @@
     "@types/react-router-dom": "^4.3.3",
     "@types/styled-components": "^4.1.16",
     "antd": "^3.19.5",
+    "connected-react-router": "^6.4.0",
     "firebase": "^6.1.1",
     "md5": "^2.2.1",
     "react": "^16.8.6",
