--- a/package.json
+++ b/package.json
@@ -3,30 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.15",
+    "@types/jest": "24.0.18",
     "@types/md5": "^2.1.33",
-    "@types/node": "12.6.2",
-    "@types/react": "16.8.23",
-    "@types/react-dom": "16.8.4",
-    "@types/react-redux": "^7.1.1",
-    "@types/react-router-dom": "^4.3.3",
+    "@types/node": "12.7.4",
+    "@types/react": "16.9.2",
+    "@types/react-dom": "16.9.0",
+    "@types/react-redux": "^7.1.2",
+    "@types/react-router-dom": "^4.3.5",
     "@types/styled-components": "^4.1.17",
-    "antd": "^3.20.1",
+    "antd": "^3.23.2",
     "connected-react-router": "^6.5.0",
-    "firebase": "^6.2.4",
+    "firebase": "^6.6.0",
     "md5": "^2.2.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-loader-spinner": "^2.3.0",
-    "react-redux": "^7.0.3",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-loader-spinner": "^3.1.2",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "3.1.1",
     "redux": "^4.0.3",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0",
+    "redux-saga": "^1.0.5",
     "styled-components": "^4.3.1",
     "typesafe-actions": "^4.4.1",
-    "typescript": "3.5.3"
+    "typescript": "3.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
